--- a/view/contatos.html
+++ b/view/contatos.html
@@ -16,7 +16,7 @@
 
     <h3>{{app}}</h3>
     <ui-alert ng-show="error" title="Ops, aconteceu um problema">{{error}}</ui-alert>
-    <input type="text" ng-model="criterioBusca" placeholder="O que você está buscando ?" class="form-control">
+    <input type="text" ng-model="criterioBusca" ng-model-options="{updateOn: 'default blur', debounce:{default: 500, blur: 0}}" placeholder="O que você está buscando ?" class="form-control">
     <table class="table" ng-show="dados.length > 0">
         <tr>
             <th><input type="checkbox" title="Selecionar todos" ng-model="selecionarTodos" ng-click="selecionarTodosContatos(dados, selecionarTodos)"></th>
@@ -28,15 +28,16 @@
             <th></th>
         </tr>
         <tr ng-repeat="dado in dados | filter: {nome:criterioBusca} | orderBy: criterioOrdernacao:direcaoOrdenacao" ng-class="{'selecionado negrito': dado.selecionado}">
-            <td> <input type="checkbox" ng-model="dado.selecionado"/> </td>
-            <td>{{dado.serial}}</td>
-            <td><a href="#!/detalhesContato/{{dado.serial}}">{{dado.nome | name | ellipseFilter: 10}}</td>
-            <td>{{dado.telefone}}</td>
-            <td>{{dado.operadora.nome}}</td>
-            <td>{{dado.data | date:'dd/MM/yyyy'}}</td>
+            <td> <input type="checkbox" ng-model="dado.selecionado" ng-click="possuiDadoSelecionado(dados)" /> </td>
+            <td>{{::dado.serial}}</td>
+            <td><a href="#!/detalhesContato/{{::dado.serial}}">{{::dado.nome | name | ellipseFilter: 10}}</td>
+            <td>{{::dado.telefone}}</td>
+            <td>{{::dado.operadora.nome}}</td>
+            <td>{{::dado.operadora.preco | currency}}</td>
+            <td>{{::dado.data | date:'dd/MM/yyyy'}}</td>
         </tr>
     </table>
     <hr/>
     <a href="#!/novoContato" class="btn btn-primary btn-block">Novo contato</a>
-    <button ng-click="apagarContato(dados)" class="btn btn-danger btn-block" ng-disabled="possuiDadoSelecionado(dados)" style="margin-top: 10px">Apagar contatos</button>
+    <button ng-click="apagarContato(dados)" class="btn btn-danger btn-block" ng-disabled="hasContatoSelecionado" style="margin-top: 10px">Apagar contatos</button>
 </div>
